fix: thumbnails are too large in the chat box #818 (#819)
### What problem does this PR solve?

fix: thumbnails are too large in the chat box #818

### Type of change

- [x] Bug Fix (non-breaking change which fixes an issue)

--- a/web/src/pages/chat/chat-container/index.less
+++ b/web/src/pages/chat/chat-container/index.less
@@ -36,6 +36,9 @@
   // .referenceIcon {
   //   padding: 0 6px;
   // }
+  .thumbnailImg {
+    max-width: 20px;
+  }
 }
 
 .messageItemLeft {
